# INF1608-Numerical-Analysis

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
modules/: CtScan.cpp  CtScan.h  ImageData.cpp  ImageData.h  helper.cpp  helper.h  simpson.cpp  simpson.h  tarefa.cpp  tarefa.h  task.cpp  task.h
